--- a/style.css
+++ b/style.css
@@ -6,16 +6,30 @@
 
 body {
     background-color: #FFEDD5;
+    font-family: 'Roboto', serif, sans-serif;
 }
 
 ul {
     list-style: none;
 }
 
+/* FONTS */
+h1, h2, h3,.price {
+    font-family: 'Roboto Serif', serif;
+    text-transform: uppercase;
+    color: #2D2C2A;
+}
+
 /* HEADER */
 header {
     padding: 32px 0;
     text-align: center;
+}
+
+header p {
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    line-height: 16px;
 }
 
 header,section {
@@ -30,6 +44,8 @@ section {
 
 header h1 {
     margin-bottom: 4px;
+    font-size: 28px;
+    line-height: 33px;
 }
 
 header h1 span {
@@ -37,7 +53,6 @@ header h1 span {
 }
 
 /* SECTION */
-
 section {
     margin-bottom: 24px;
 }
@@ -47,6 +62,7 @@ section h2 {
     padding: 8px 16px;
     text-align: center;
     margin-bottom: 24px;
+    font-size: 18px;
 }
 
 /* LISTA */
@@ -62,4 +78,13 @@ li .details {
 
 .details h3 {
     margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 19px;    
 }
+
+.details p {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    line-height: 21px;
+}
+
